fix(css/colors): adjust colors and spacing for banner

--- a/src/assets/style/reset.scss
+++ b/src/assets/style/reset.scss
@@ -34,7 +34,7 @@
 body {
   min-height: 100vh;
   color: hsl(var(--color-text));
-  background: linear-gradient(180deg, hsl(var(--color-primary)), hsl(var(--color-tertiary)));
+  background: linear-gradient(150deg, hsl(var(--color-primary)), hsl(var(--color-tertiary)));
   transition: color 0.5s, background-color 0.5s;
   font-family: $font;
   text-rendering: optimizeLegibility;
@@ -49,7 +49,6 @@ h4,
 h5,
 h6 {
   font-family: $heading-font;
-  font-weight: 600;
 }
 
 p {
